<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Jasper van Riet
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="app_name">Jager</string>
    <string name="dev_name">Created by\n Jasper van Riet</string>

    <string name="screenshot_description">Screenshot previewing the website</string>

    <string name="view_empty_comments">No comments. None!</string>
    <string name="view_empty_products">Can\'t find any products!</string>

    <string name="card_product_comments">View comments</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_calendar">Pick a day</string>
    <string name="menu_share">Share</string>
    <string name="menu_share_title">Share product</string>
    <string name="menu_browser">Open in browser</string>
    <string name="menu_rate">Rate the app</string>

    <string name="actionbar_loading">Loading…</string>

    <string-array name="drawer_items">
        <item>Products</item>
        <item>Collections</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>

    <string name="error_connection">Error in connecting to Product Hunt</string>
    <string name="error_ssl">SSL error: this website is not safe</string>
    <string name="error_play_store">Google Play Store not found on your device</string>

    <string name="settings_category_general">General</string>
    <string name="settings_category_misc">Other</string>

    <string name="settings_open_link_in_browser">Open links in system browser</string>
    <string name="settings_crash_data">Automatically submit crash reports</string>
    <string name="settings_open_source_licenses">Open source licenses</string>
    <string name="settings_show_as_read">Show indicator for viewed products</string>
    <string name="settings_show_as_read_summary">Will show you which products
        you have already viewed</string>
    <string name="settings_send_feedback">Send feedback</string>


</resources>
