<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_category_general"
        >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preference_show_as_read"
            android:title="@string/settings_show_as_read"
            android:summary="@string/settings_show_as_read_summary"
            />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preference_open_link_in_browser"
            android:title="@string/settings_open_link_in_browser"
            android:summary="@string/settings_open_link_in_browser"
            />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_crash_data"
            android:title="@string/settings_crash_data"
            android:summary="@string/settings_crash_data"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_misc"
        >

        <Preference
            android:key="preference_open_source_licenses"
            android:title="@string/settings_open_source_licenses"/>

        <Preference
            android:key="preference_send_feedback"
            android:title="@string/settings_send_feedback"/>

    </PreferenceCategory>

</PreferenceScreen>